# mcp-time-server-with-benchmark

./: .gitignore  BENCHMARK.md  BENCH_README.md  Cargo.toml  bench-direct-fast-time.sh  bench-direct-mcp-time-server.sh  bench-hey.sh  bench-py-wrapper.sh  bench-rewrk.sh  bench-wrapper-flamegraph.sh  bench-wrapper-tls.sh  bench-wrapper.sh  bench.toml  benchmark-get-system-time.sh  benchmark-tools-list.sh  fast-time-server.asc  generate_certs.sh  make-links.sh  pedantic-clippy.sh  pyproject.toml  run-mcp-time-server-tls.sh  run-mcp-time-server.sh  test-fast-time-curl-tls.sh  test-fast-time-curl.sh  test-fast-time-http-curl.sh  test-fast-time-stdio-py-wrapper.sh  test-fast-time-stdio.sh  test-fast-time-wrapper.sh
src/: handlers.rs  main.rs  rpc.rs  tools.rs  types.rs
